--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -86,7 +86,9 @@ span {
   align-items: center;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  text-align: center; }
+  text-align: center;
+  max-width: 1000px;
+  margin: 0 auto; }
   .allocations span {
     font-size: 2.2rem;
     letter-spacing: 1px; }
